


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation = 'horizontal'
        tools:context="com.example.android.cricketscore.MainActivity">



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src = "@drawable/crix"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation = 'horizontal'
            tools:context="com.example.android.courtcounter.MainActivity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation = 'vertical'
                android:layout_weight="1"
                tools:context="com.example.android.courtcounter.MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/TeamA"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize = "14sp"
                    android:textColor="#D50000"
                    android:fontFamily="sans-serif-medium"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal" >

                    <TextView
                        android:id = "@+id/team_a_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "0"
                        android:textSize = "56sp"
                        android:textColor="#000000"
                        android:fontFamily="sans-serif-light"/>

                    <TextView
                        android:id = "@+id/team_a_sls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "/"
                        android:gravity="right"
                        android:textSize = "56sp"
                        android:textColor="#FFFFFF"
                        android:fontFamily="sans-serif-light"/>

                    <TextView
                        android:id = "@+id/team_a_wkt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "0"
                        android:textSize = "32sp"
                        android:textColor="#B71C1C"
                        android:fontFamily="sans-serif-light"/>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/run1"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "runOneA"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/run4"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "runFourA"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/run6"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "runSixA"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/wideball"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "noBallA"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/Wicket"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "wicketA"
                    android:textSize = "14sp"
                    android:textColor="#B71C1C"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/summaryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation = 'vertical'
                android:layout_weight="1"
                tools:context="com.example.android.courtcounter.MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/TeamB"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize = "14sp"
                    android:textColor="#D50000"
                    android:fontFamily="sans-serif-medium"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal" >

                    <TextView
                        android:id = "@+id/team_b_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "0"
                        android:gravity="center_horizontal"
                        android:textSize = "56sp"
                        android:textColor="#000000"
                        android:fontFamily="sans-serif-light"/>

                    <TextView
                        android:id = "@+id/team_b_sls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "/"
                        android:gravity="right"
                        android:textSize = "56sp"
                        android:textColor="#FFFFFF"
                        android:fontFamily="sans-serif-light"/>

                    <TextView
                        android:id = "@+id/team_b_wkt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "0"
                        android:textSize = "32sp"
                        android:textColor="#B71C1C"
                        android:fontFamily="sans-serif-light"/>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text= "@string/run1"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:onClick = "runOneB"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/run4"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "runFourB"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/run6"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "runSixB"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/wideball"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "noBallB"
                    android:textSize = "14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/Wicket"
                    android:layout_marginRight = "24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:onClick = "wicketB"
                    android:textSize = "14sp"
                    android:textColor="#B71C1C"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/summaryB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/Reset"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick = "Reset"
            android:textSize = "14sp"
            android:textColor="#01579B"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"/>


    </RelativeLayout>
